--- a/app/src/main/res/layout/content_basic2.xml
+++ b/app/src/main/res/layout/content_basic2.xml
@@ -17,7 +17,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.31" />
+        android:layout_weight="0.31"
+        android:id="@+id/result_view"
+        android:hint="0"/>
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,17 +30,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bksp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:id="@+id/bbksp"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="C"
-            android:layout_weight="2"/>
+            android:layout_weight="2"
+            android:id="@+id/bclear"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+-"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:id="@+id/plus_minus"/>
 
     </LinearLayout>
 
@@ -53,22 +58,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="7"/>
+            android:text="7"
+            android:id="@+id/b7"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="8"/>
+            android:text="8"
+            android:id="@+id/b8"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="9"/>
+            android:text="9"
+            android:id="@+id/b9"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="/"/>
+            android:text="/"
+            android:id="@+id/bdiv"/>
     </LinearLayout>
 
     <LinearLayout
@@ -81,22 +90,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="4"/>
+            android:text="4"
+            android:id="@+id/b4"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="5"/>
+            android:text="5"
+            android:id="@+id/b5"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="6"/>
+            android:text="6"
+            android:id="@+id/b6"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="*"/>
+            android:text="*"
+            android:id="@+id/bmult"/>
 
     </LinearLayout>
 
@@ -109,22 +122,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="1"/>
+            android:text="1"
+            android:id="@+id/b1"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="2"/>
+            android:text="2"
+            android:id="@+id/b2"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="3"/>
+            android:text="3"
+            android:id="@+id/b3"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="-"/>
+            android:text="-"
+            android:id="@+id/bminus"/>
 
     </LinearLayout>
 
@@ -137,22 +154,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="0"/>
+            android:text="0"
+            android:id="@+id/b0"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="."/>
+            android:text="."
+            android:id="@+id/bdot"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="="/>
+            android:text="="
+            android:id="@+id/bresult"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="+"/>
+            android:text="+"
+            android:id="@+id/bplus"/>
 
     </LinearLayout>
     
