--- a/app/src/main/res/layout/content_basic2.xml
+++ b/app/src/main/res/layout/content_basic2.xml
@@ -12,7 +12,8 @@
     tools:context="com.example.pawelek.calculator2.BasicActivity"
     tools:showIn="@layout/activity_basic2"
     android:orientation="vertical"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:id="@+id/basic_layout">
     
     <TextView
         android:layout_width="match_parent"
@@ -20,7 +21,7 @@
         android:layout_weight="0.31"
         android:id="@+id/result_view"
         android:textAlignment="textEnd"
-        android:hint="@string/n0"/>
+        />
     
     <LinearLayout
         android:layout_width="match_parent"
