--- a/app/src/main/res/layout/content_basic2.xml
+++ b/app/src/main/res/layout/content_basic2.xml
@@ -21,6 +21,8 @@
         android:layout_weight="1"
         android:id="@+id/result_view"
         android:textAlignment="textEnd"
+        android:textSize="42dp"
+        android:text="dupa"
         />
 
     <LinearLayout
@@ -164,27 +166,27 @@
         android:layout_weight="0.4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="3"
+        android:weightSum="4"
         android:orientation="horizontal"
-        android:columnCount="4">
+        >
         <Button
 
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="2.66"
+            android:layout_weight="2"
 
             android:text="@string/btn0"
             android:id="@+id/b0"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="0.165"
+            android:layout_weight="0.4"
             android:text="@string/btn_dot"
             android:id="@+id/bdot"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="0.165"
+            android:layout_weight="0.5"
             android:text="@string/btn_result"
             android:id="@+id/bresult"/>
 
